header + nav (in progress)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
         <title>Revolut</title>
     </head>
     <body>
+        <!-- Inserimento Header -->
+        <header>
+            <div class="header-container">        <!-- Header sinistro -->
+                <div class="header-left">
+                    <img src="https://www.pinclipart.com/picdir/middle/336-3365313_revolut-review-is-it-the-best-way-to.png" alt="logo">
+                    <a href="#">Personale</a>
+                    <a href="#">Business</a>
+                </div>
 
+                <nav class="header-right">   <!-- Header destro -->
+                    <ul>
+                        <li><a href="#">Tariffazione</a></li>
+                        <li class="dropdown-menu">
+                            <a href="#">Conti</a>
+                        </li>
+
+                        <li class="dropdown-menu">
+                            <a href="#">Prodotti</a>
+                        </li>
+
+                        <li class="dropdown-menu">
+                            <a href="#">Azienda</a>
+                        </li>
+
+                        <li class="dropdown-menu">
+                            <a href="#">Aiuto</a>
+                        </li>
+
+                        <li><a id="bottone" href="#">Scarica App</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+        </header>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
