nav style (in progress)

--- a/index.html
+++ b/index.html
@@ -23,18 +23,49 @@
                         <li><a href="#">Tariffazione</a></li>
                         <li class="dropdown-menu">
                             <a href="#">Conti</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Standard</a></li>
+                                <li><a href="#">Premium</a></li>
+                                <li><a href="#">Metal</a></li>
+                            </ul>
                         </li>
 
                         <li class="dropdown-menu">
                             <a href="#">Prodotti</a>
+                            <ul class="dropdown">
+                              <li><a href="#">Trasferimenti di denaro</a></li>
+                              <li><a href="#">Salvadanaio</a></li>
+                              <li><a href="#">Gestione budget</a></li>
+                              <li><a href="#">Perk</a><span>Beta</span></li>
+                              <li><a href="#">Criptovaluta</a></li>
+                              <li><a href="#">Assicurazione smartphone</a></li>
+                              <li><a href="#">Assicurazione medica internazionale</a></li>
+                              <li><a href="#">API di open banking</a></li>
+                              <li><a href="#">Apple pay</a><span>Nuovo</span></li>
+                              <li><a href="#">Donazioni</a><span>Nuovo</span></li>
+                            </ul>
                         </li>
 
                         <li class="dropdown-menu">
                             <a href="#">Azienda</a>
+                            <ul class="dropdown">
+                              <li><a href="#">Chi siamo</a></li>
+                              <li><a href="#">Blog</a></li>
+                              <li><a href="#">Lavora con noi</a></li>
+                              <li><a href="#">Affiliates</a></li>
+                              <li><a href="#">Influencers</a></li>
+                              <li><a href="#">Contatto</a></li>
+                            </ul>
                         </li>
 
                         <li class="dropdown-menu">
                             <a href="#">Aiuto</a>
+                            <ul class="dropdown">
+                              <li><a href="#">Community</a></li>
+                              <li><a href="#">Centro assistenza</a></li>
+                              <li><a href="#">Security</a></li>
+                              <li><a href="#">Stato di sistema</a></li>
+                            </ul>
                         </li>
 
                         <li><a id="bottone" href="#">Scarica App</a></li>
