--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
                     </ul>
                 </nav>
             </div>
-
         </header>
 
+        <div class="jumbotron-container">
+            <div class="jumbotron">
+                <h1>I nostri piani tariffari</h1>
+                <p>Nessuna sorpresa, prezzi giusti e onesti . Basta scegliere un piano in base alle caratteristiche e funzioni che più desideri.</p>
+            </div>
+        </div>
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/script.js" charset="utf-8"></script>
