--- a/index.html
+++ b/index.html
@@ -74,13 +74,72 @@
             </div>
         </header>
 
+        <!-- Inserimento sezione Jumbotron -->
         <div class="jumbotron-container">
             <div class="jumbotron">
                 <h1>I nostri piani tariffari</h1>
                 <p>Nessuna sorpresa, prezzi giusti e onesti . Basta scegliere un piano in base alle caratteristiche e funzioni che più desideri.</p>
             </div>
         </div>
-        
+
+        <!-- Inserimento sezione cards -->
+        <div class="cards-container">
+            <div class="cards">
+                <div class="card left">
+                    <p>Standard</p>
+                    <h2>€0/m</h2>
+                    <ul>
+                        <li>Conto Regno Unito gratuito</li>
+                        <li>Conto euro IBAN gratuito</li>
+                        <li>Puoi fare spese in oltre 150 valute al tasso di cambio interbancario</li>
+                        <li>Cambio senza commissioni nascoste in 30 valute fiat fino a €6,000 al mese</li>
+                        <li>Prelievi da bancomat senza commissioni fino a €200 al mese.</li>
+                    </ul>
+                </div>
+                <div class="card middle">
+                    <p>Premium</p>
+                    <h2>€7.99/m</h2>
+                    <ul>
+                        <li>Conto Regno Unito gratuito</li>
+                        <li>Conto euro IBAN gratuito</li>
+                        <li>Puoi fare spese in oltre 150 valute al tasso di cambio interbancario</li>
+                        <li>Cambio illimitato in 30 valute fiat, senza limite mensile</li>
+                        <li>Prelievi da bancomat senza commissioni fino a €400 al mese.</li>
+                        <li>Assicurazione medica internazionale</li>
+                        <li>Assicurazione per ritardi su volo e bagagli</li>
+                        <li>Consegna espresso/prioritaria globale</li>
+                        <li>Assistenza clienti prioritaria</li>
+                        <li>Accesso immediato a 5 criptovalute</li>
+                        <li>Carta premium con design esclusivi</li>
+                        <li>Carte virtuali usa e getta</li>
+                        <li>Accesso tramite Pass LoungeKey</li>
+                        <li>Pass di accesso gratuito alla lounge per te e un amico, se il volo ritarda più di un'ora</li>
+                    </ul>
+                </div>
+                <div class="card right">
+                    <p>Metal</p>
+                    <h2>€13.99/m</h2>
+                    <ul>
+                        <li>Conto Regno Unito gratuito</li>
+                        <li>Conto euro IBAN gratuito</li>
+                        <li>Puoi fare spese in oltre 150 valute al tasso di cambio interbancario</li>
+                        <li>Cambio illimitato in 30 valute fiat, senza limite mensile</li>
+                        <li>Prelievi da bancomat senza commissioni fino a €600 al mese.</li>
+                        <li>Assicurazione medica internazionale</li>
+                        <li>Assicurazione per ritardi su volo e bagagli</li>
+                        <li>Consegna espresso/prioritaria globale</li>
+                        <li>Assistenza clienti prioritaria</li>
+                        <li>Accesso immediato a 5 criptovalute</li>
+                        <li>Carte Revolut Metal esclusive</li>
+                        <li>Carte virtuali usa e getta</li>
+                        <li>Accesso tramite Pass LoungeKey</li>
+                        <li>Pass di accesso gratuito alla lounge per te e fino a 3 amici, se il volo ritarda più di un'ora </li>
+                        <li>Fino allo 0,1% di Cashback in Europa e fino al 1% fuori dall'Europa, su ogni pagamento fatto con carta</li>
+                        <li>Ottieni un concierge per gestire meglio il tuo stile di vita</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/script.js" charset="utf-8"></script>
