proseguimento replica sito

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                               <li><a href="#">Trasferimenti di denaro</a></li>
                               <li><a href="#">Salvadanaio</a></li>
                               <li><a href="#">Gestione budget</a></li>
-                              <li><a href="#">Perk</a><span>Beta</span></li>
+                              <li><a href="#">Perk</a><sup>Beta</up></li>
                               <li><a href="#">Criptovaluta</a></li>
                               <li><a href="#">Assicurazione smartphone</a></li>
                               <li><a href="#">Assicurazione medica internazionale</a></li>
                               <li><a href="#">API di open banking</a></li>
-                              <li><a href="#">Apple pay</a><span>Nuovo</span></li>
-                              <li><a href="#">Donazioni</a><span>Nuovo</span></li>
+                              <li><a href="#">Apple pay</a><sup>Nuovo</sup></li>
+                              <li><a href="#">Donazioni</a><sup>Nuovo</sup></li>
                             </ul>
                         </li>
 
@@ -87,7 +87,7 @@
             <div class="cards">
                 <div class="card left">
                     <p>Standard</p>
-                    <h2>€0/m</h2>
+                    <h2><sup>€</sup>0<sub>/m</sub></h2>
                     <ul>
                         <li>Conto Regno Unito gratuito</li>
                         <li>Conto euro IBAN gratuito</li>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="card middle">
                     <p>Premium</p>
-                    <h2>€7.99/m</h2>
+                    <h2><sup>€</sup>7.99<sub>/m</sub></h2>
                     <ul>
                         <li>Conto Regno Unito gratuito</li>
                         <li>Conto euro IBAN gratuito</li>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="card right">
                     <p>Metal</p>
-                    <h2>€13.99/m</h2>
+                    <h2><sup>€</sup>13.99<sub>/m</sub></h2>
                     <ul>
                         <li>Conto Regno Unito gratuito</li>
                         <li>Conto euro IBAN gratuito</li>
@@ -138,6 +138,20 @@
                         <li>Ottieni un concierge per gestire meglio il tuo stile di vita</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+
+        <div class="scelta-piano">
+            <div class="scelta left">
+                <a href="#">Scegli standard</a>
+            </div>
+            <div class="scelta middle">
+                <a href="#">Scegli premium</a>
+                <p>Sconto speciale se paghi in anticipo</p>
+            </div>
+            <div class="scelta right">
+                <a href="#">Scegli standard</a>
+                <p>Sconto speciale se paghi in anticipo</p>
             </div>
         </div>
 
