--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <p>Sconto speciale se paghi in anticipo</p>
             </div>
             <div class="scelta right">
-                <a href="#">Scegli standard</a>
+                <a href="#">Scegli metal</a>
                 <p>Sconto speciale se paghi in anticipo</p>
             </div>
         </div>
