--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         </div>
 
         <div class="scelta-piano">
-            <div class="scelta left">
+            <div id="trigger" class="scelta">
                 <a href="#">Scegli standard</a>
             </div>
-            <div class="scelta middle">
+            <div id="trigger" class="scelta">
                 <a href="#">Scegli premium</a>
                 <p>Sconto speciale se paghi in anticipo</p>
             </div>
-            <div class="scelta right">
+            <div id="trigger" class="scelta">
                 <a href="#">Scegli metal</a>
                 <p>Sconto speciale se paghi in anticipo</p>
             </div>
