--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </ul>
                         </li>
 
-                        <li><a id="bottone" href="#">Scarica App</a></li>
+                        <li id="pulse"><a id="bottone" href="#">Scarica App</a></li>
                     </ul>
                 </nav>
             </div>
